src/test/ui/error-codes/E0604.stderr
error[E0604]: only `u8` can be cast as `char`, not `u32`
  --> $DIR/E0604.rs:12:5
   |
12 |     1u32 as char; //~ ERROR E0604
   |     ^^^^^^^^^^^^

error: aborting due to previous error

